[gd_scene load_steps=5 format=4 uid="uid://b61iqknq8r7m2"]

[ext_resource type="Script" path="res://assets/scripts/room.gd" id="1_2laa5"]
[ext_resource type="TileSet" uid="uid://d0eusdwt4lmko" path="res://assets/dungeon_tile_set.tres" id="1_222id"]
[ext_resource type="PackedScene" uid="uid://tj2hwkxm7o6b" path="res://scenes/levels/basic_halls.tscn" id="2_gu2wm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vmbmk"]
size = Vector2(6, 48.75)

[node name="BasicRoom" type="Node2D"]
script = ExtResource("1_2laa5")
room_type = "Room"

[node name="Background" type="TileMapLayer" parent="."]
position = Vector2(144, 21)
tile_map_data = PackedByteArray("AAD+//7/AAACAA8AAAD+////AAACAA8AAAD+/wAAAAACAA8AAAD///7/AAACAA8AAAD/////AAACAA8AAAD//wAAAAACAA8AAAAAAP7/AAACAA8AAAAAAP//AAACAA8AAAAAAAAAAAACAA8AAAABAP7/AAACAA8AAAABAP//AAACAA8AAAABAAAAAAACAA8AAAD//wEAAAACAA8AAAD//wIAAAACAA8AAAAAAAEAAAACAA8AAAAAAAIAAAACAA8AAAABAAEAAAACAA8AAAABAAIAAAACAA8AAAD+//3/AAACAA8AAAD+/wEAAAACAA8AAAD+/wIAAAACAA8AAAD///3/AAACAA8AAAAAAP3/AAACAA8AAAABAP3/AAACAA8AAAACAP3/AAACAA8AAAACAP7/AAACAA8AAAACAP//AAACAA8AAAACAAAAAAACAA8AAAACAAEAAAACAA8AAAACAAIAAAACAA8AAAADAP3/AAACAA8AAAADAPz/AAACAA8AAAAAAPz/AAACAA8AAAABAPz/AAACAA8AAAACAPz/AAACAA8AAAD9//z/AAACAA8AAAD9//3/AAACAA8AAAD9//7/AAACAA8AAAD9////AAACAA8AAAD9/wAAAAACAA8AAAD9/wEAAAACAA8AAAD9/wIAAAACAA8AAAD+/wMAAAACAA8AAAD//wMAAAACAA8AAAAAAAMAAAACAA8AAAABAAMAAAACAA8AAAACAAMAAAACAA8AAAADAP7/AAACAA8AAAADAAEAAAACAA8AAAADAAIAAAACAA8AAAD+//z/AAACAA8AAAD9/wMAAAACAA8AAAADAAMAAAACAA8AAAADAP//AAACAA8AAAADAAAAAAACAA8AAAD///z/AAACAA8AAAD8/wMAAAACAA8AAAD8//z/AAACAA8AAAD8//3/AAACAA8AAAD8//7/AAACAA8AAAD8////AAACAA8AAAD8/wAAAAACAA8AAAD8/wEAAAACAA8AAAD8/wIAAAACAA8AAAAEAPz/AAACAA8AAAAEAP3/AAACAA8AAAAEAP7/AAACAA8AAAAEAP//AAACAA8AAAAEAAAAAAACAA8AAAAEAAEAAAACAA8AAAAEAAIAAAACAA8AAAAEAAMAAAACAA8AAAD7//z/AAACAA8AAAD7//3/AAACAA8AAAD7//7/AAACAA8AAAD7////AAACAA8AAAD7/wAAAAACAA8AAAD7/wEAAAACAA8AAAD7/wIAAAACAA8AAAD7/wMAAAACAA8AAAD8//v/AAACAA4AAAD9//v/AAACAA4AAAD+//v/AAACAA4AAAD///v/AAACAA4AAAAAAPv/AAACAA4AAAABAPv/AAACAA4AAAACAPv/AAACAA4AAAADAPv/AAACAA4AAAD8/wQAAAACAA4AACD9/wQAAAACAA4AACD+/wQAAAACAA4AACD//wQAAAACAA4AACAAAAQAAAACAA4AACABAAQAAAACAA4AACACAAQAAAACAA4AACADAAQAAAACAA4AACAFAAMAAAAEAA8AAAAFAAIAAAAEAA8AAAAFAAEAAAAFABEAAAAFAP7/AAAFABEAACAFAP3/AAAEAA8AAAAFAPz/AAAEAA8AAAAEAPv/AAACAA4AAAAEAAQAAAACAA4AACAFAAQAAAAEABEAAAAFAPv/AAAEABEAACD7/wQAAAACAA4AACD7//v/AAACAA4AAAD6//z/AAABAA8AAAD6//3/AAABAA8AAAD6//7/AAAGABIAAAD6/wEAAAAGABIAACD6/wIAAAABAA8AAAD6/wMAAAABAA8AAAD6/wQAAAABABEAAAD6//v/AAABABEAACD6////AAACAA8AAAD6/wAAAAACAA8AAAAFAP//AAACAA8AAAAFAAAAAAACAA8AAAA=")
tile_set = ExtResource("1_222id")

[node name="Midground" type="TileMapLayer" parent="."]
z_index = 2
position = Vector2(144, 21)
tile_map_data = PackedByteArray("AAACAPr/AAACAAQAAAADAPr/AAACAAQAAAADAPv/AAACAAUAAAAEAPr/AAACAAQAAAAFAPr/AAAEAAEAAAAFAPv/AAAEAAIAAAAFAPz/AAAEAAMAAAD6//r/AAABAAEAAAD6//v/AAABAAIAAAD6//z/AAAEAAMAAAD7//r/AAACAAQAAAD7//v/AAACAAUAAAD8//r/AAACAAQAAAD9//r/AAACAAQAAAD8//v/AAACAAUAAAD9//v/AAACAAUAAAACAPv/AAACAAUAAAAEAPv/AAACAAUAAAABAPr/AAACAAQAAAD+//r/AAACAAQAAAD6//3/AAAEAAYAAAAFAP3/AAABAAYAAAD+//v/AAACAAUAAAD///r/AAACAAQAAAD///v/AAACAAUAAAAAAPr/AAACAAQAAAAAAPv/AAACAAUAAAABAPv/AAACAAUAAAD6//7/AAAEAAcAAAAFAP7/AAABAAcAAAA=")
tile_set = ExtResource("1_222id")

[node name="MidgroundSouth" type="TileMapLayer" parent="."]
z_index = 10
position = Vector2(144, 21)
tile_map_data = PackedByteArray("AAACAAQAAAADAAcAAAADAAQAAAADAAcAAAAEAAQAAAADAAcAAAAFAAMAAAAEAAYAAAAFAAQAAAAEAAcAAAD6/wMAAAABAAYAAAD6/wQAAAABAAcAAAD7/wQAAAADAAcAAAD8/wQAAAADAAcAAAD9/wQAAAADAAcAAAAFAAIAAAAEAAMAAAABAAQAAAADAAcAAAD+/wQAAAADAAcAAAACAAMAAAACAAQAAAADAAMAAAACAAQAAAAEAAMAAAACAAQAAAD+/wMAAAACAAQAAAD9/wMAAAACAAQAAAD8/wMAAAACAAQAAAD7/wMAAAACAAQAAAD6/wIAAAAEAAMAAAABAAMAAAACAAQAAAD//wQAAAADAAcAAAAAAAQAAAADAAcAAAD//wMAAAACAAQAAAAAAAMAAAACAAQAAAD6/wAAAAAEAAEAAAD6/wEAAAAEAAIAAAAFAAEAAAABAAIAAAAFAAAAAAABAAEAAAA=")
tile_set = ExtResource("1_222id")

[node name="BasicHalls" parent="." instance=ExtResource("2_gu2wm")]

[node name="EastTrigger" type="Area2D" parent="."]
position = Vector2(48, 0)
collision_layer = 0
collision_mask = 2

[node name="EastGenerationTrigger" type="CollisionShape2D" parent="EastTrigger"]
position = Vector2(187, 23)
shape = SubResource("RectangleShape2D_vmbmk")

[node name="WestConnector" type="Node2D" parent="."]

[node name="EastConnector" type="Node2D" parent="."]
position = Vector2(288, 0)

[connection signal="body_entered" from="EastTrigger" to="." method="_on_area_2d_body_entered"]
